[package]
name = "nft-staking"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nft_staking"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version="0.30.0", features=["init-if-needed"]}
anchor-spl = { version = "0.30.0", features = ["metadata"] }
toml_datetime = "0.6.6"
solana-program = "1.18.14"
mpl-token-metadata = "4.1.2"